# cqlite

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: cqlite_exploration.launch
scripts/: cqlite_filter.py  cqlite_functions.py  cqlite_planner.py  frontier_opencv_detector.py
src/: cqlite_functions.cpp  cqlite_mtrand.cpp  global_frontier_detector.cpp  local_frontier_detector.cpp
